# recall

./: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.mjs  tsconfig.json  wrangler.jsonc
apps/mac/: eslint.config.js  index.html  package.json  vite.config.ts
apps/mac/src/: App.css  App.tsx  index.css  types.ts
apps/mac/src-tauri/: Cargo.toml  tauri.conf.json
apps/mac/src-tauri/icons/: icon.icns
apps/mac/src-tauri/src/: lib.rs  main.rs  store.rs
apps/mac/src/lib/: desktop.ts
cli/: package.json  tsconfig.json
cli/commands/: add.ts  cards.ts  config.ts  decks.ts  import.ts  stats.ts
cli/lib/: client.ts  config.ts  input.ts  parsers.ts
db/: schema.sql
public/: manifest.json
src/: env.d.ts
src/components/: DeckList.astro  ReviewCard.astro  StatsChart.astro
src/layouts/: Base.astro
src/lib/: auth.ts  constants.ts  db.ts  fsrs.ts  http.ts  runtime.ts
src/pages/: index.astro  login.astro  review.astro  stats.astro
src/pages/api/: cards.ts  decks.ts  session.ts  stats.ts
src/pages/api/cards/: [id].ts  bulk.ts
src/pages/api/decks/: [id].ts
src/pages/api/decks/[id]/: archive.ts  due.ts
src/pages/api/review/: [id].ts  undo.ts
src/pages/api/sync/: export.ts
src/pages/decks/: [id].astro  index.astro
src/styles/: global.css
